RSBase/.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\common\RSStats.java:22: error: unmappable character for encoding Cp1251
    /** –?–º—è –º–æ–¥–∞ */
         ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\common\network\PacketHandler.java:17: error: unmappable character for encoding Cp1251
     * –?–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ—Ç –æ–±—Ä–∞–±–æ—Ç—á–∏–∫, —Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä—É—è —Å–æ–æ–±
        ^
1 warning

:processResources UP-TO-DATE
:classes
:jar
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:extractMcpData UP-TO-DATE
:getVersionJson
:extractUserDev UP-TO-DATE
:genSrgs SKIPPED
:reobf
:assemble
:check UP-TO-DATE
:build

BUILD SUCCESSFUL

Total time: 6.585 secs
